<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите длину дуги" />

    <EditText
        android:id="@+id/editTextA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите угол (в градусах)" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Вычислить" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Результат"
        android:textSize="18sp"/>
</LinearLayout>
