<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_calculator"
        android:icon="@drawable/ic_calculator"
        android:title="Calculator"/>

    <item
        android:id="@+id/nav_sector_area"
        android:icon="@drawable/ic_sector"
        android:title="Sector Area"/> <!-- Добавляем этот элемент -->

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="Settings"/>
</menu>
