<resources>
    <string name="app_name">GuessTheNumber</string>
    <string name="behind">Недолет!</string>
    <string name="ahead">Перелет!</string>
    <string name="hit">В точку!</string>
    <string name="input_value">Ввести значение</string>
    <string name="new_game">Новая игра</string>
    <string name="exit">Завершить игру</string>
    <string name="try_to_guess">Попробуйте угадать число (1 - 100)</string>
    <string name="error">Неверный ввод</string>
</resources>